--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,33 @@
+-e git+git@github.com:kburudi/ah-mini.git@7ae54b161ae4a592bd73c423ec51c9f52153aa28#egg=a_haven
 atomicwrites==1.3.0
 attrs==19.1.0
 blessings==1.7
 certifi==2019.6.16
 chardet==3.0.4
+Click==7.0
+colorama==0.3.9
 coverage==4.5.3
 coveralls==1.8.1
+cursor==1.2.0
 docopt==0.6.2
+halo==0.0.26
 idna==2.8
 importlib-metadata==0.18
+inquirer==2.6.3
+log-symbols==0.0.13
 more-itertools==7.0.0
 packaging==19.0
 pluggy==0.12.0
 py==1.8.0
 pyparsing==2.4.0
 pytest==4.6.3
+pytest-cov==2.5.1
 python-editor==1.0.4
 readchar==2.0.1
 requests==2.22.0
 six==1.12.0
+spinners==0.0.23
+termcolor==1.1.0
 urllib3==1.25.3
 wcwidth==0.1.7
 zipp==0.5.1
