--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: python
 
 python:
-  - "3.5.2"
+  - "3.6.5"
 
 install:
-  - pip install -r requirements.txt
+  - pip install -e .
 
 script:
-  - pytest
+  - pytest --cov=my_commands
 
 after_success:
   - coveralls
